# Diet_agent

./: .env  README.md  main-ollama.py  pyproject.toml
.devcontainer/: devcontainer.json
src/: main-ollama.py
